--- a/final_project/album.css
+++ b/final_project/album.css
@@ -29,7 +29,9 @@ body {
   min-height: 50rem; /* Can be removed; just added for demo purposes */
   padding-top: 3rem;
   padding-bottom: 3rem;
-  background-color: #f7f7f7;
+  background-color: #f7f7f7
+  width: 100%;
+  height: 100%;
 }
 
 .card {
