--- a/final_project/album.css
+++ b/final_project/album.css
@@ -29,9 +29,7 @@ body {
   min-height: 50rem; /* Can be removed; just added for demo purposes */
   padding-top: 3rem;
   padding-bottom: 3rem;
-  background-color: #f7f7f7
-  width: 100%;
-  height: 100%;
+  background-color: #f7f7f7;
 }
 
 .card {
@@ -44,6 +42,8 @@ body {
 
 .card > img {
   margin-bottom: .75rem;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .card-text {
